anim off, faster zoom for smaller displays

--- a/app.css
+++ b/app.css
@@ -40,6 +40,7 @@
   /* .main-txt properties */
   --main-txt-display: block;
   --main-txt-grid-areas: "";
+  --main-txt-row-spacing: none;
   --main-txt-heading-margin: 75px 0;
   --main-txt-bg-color: rgb(0, 0, 0, 0.8);
   --max-main-line-length: 1090px;
@@ -180,7 +181,8 @@ img {
   background-color: var(--main-txt-bg-color);
   z-index: 1;
   display: var(--main-txt-display);
-  grid-template-areas: var(--main-txt-grid-areas); }
+  grid-template-areas: var(--main-txt-grid-areas);
+  grid-template-rows: var(--main-txt-row-spacing); }
 
 /* Title of the researcher's collection of work */
 .main-title {
@@ -511,6 +513,7 @@ img {
       "title desc"
       "name desc"
       "url desc";
+    --main-txt-row-spacing: auto auto 1fr;
     --main-txt-heading-margin: 0px 0px 25px 0px;
     --main-title-size: 144px;
     --main-researcher-name-size: 84px;
@@ -563,7 +566,7 @@ img {
     --horizontal-center-margins: 0;
     /* .main-txt properties */
     --max-main-line-length: 800px;
-    --main-title-size: 132px;
+    --main-title-size: 124px;
     --main-researcher-name-size: 72px;
     --main-desc-size: 36px;
     --main-link-size: 24px;
@@ -604,7 +607,10 @@ img {
     --imm-sch-url-padding: 0 75px 25px 0.5vw;
     --imm-sch-url-display: inline-table;
     --logo-display: inline-block;
-    --max-logo-height: 80px; } }
+    --max-logo-height: 80px; }
+  .imm-sch-url {
+    margin: 0;
+    padding-left: 75px; } }
 
 /* (Aspect ratios between 5/7 and 6/7) */
 /* For an even narrower "portrait" layout */
@@ -617,8 +623,8 @@ img {
       "matrix matrix"
       "main-txt desc"
       "link link";
-    --top-row-height: 80vh;
-    --middle-row-height: 15vh;
+    --top-row-height: 77.5vh;
+    --middle-row-height: 17.5vh;
     --bottom-row-height: 5vh;
     /* .main-txt properties */
     --main-txt-padding: 50px;
@@ -643,7 +649,9 @@ img {
     --imm-sch-url-padding: 0px;
     --imm-sch-url-size: 12px;
     --logo-padding: 0 0 0 50px;
-    --max-logo-height: 50px; } }
+    --max-logo-height: 50px; }
+  .imm-sch-url {
+    padding-left: 0px; } }
 
 /* The narrowest "portrait" layouts */
 /* (Aspect ratios below 11/21) */
@@ -695,7 +703,9 @@ img {
     --imm-sch-url-padding: 0 75px 75px 75px;
     --imm-sch-url-size: 12px;
     --imm-sch-url-display: block;
-    --max-logo-height: 50px; } }
+    --max-logo-height: 50px; }
+  .imm-sch-url {
+    padding-left: 50px; } }
 
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
@@ -949,7 +959,7 @@ img {
 /**********************************************************************/
 /******************** For larger mobile device ********************/
 /**********************************************************************/
-@media (max-width: 425px) and (max-height: 2099px) {
+@media (max-width: 600px) and (max-height: 2099px) {
   :root {
     /* body and .main-container properties */
     /* .main-txt properties */
@@ -976,18 +986,26 @@ img {
 /******************** For medium mobile device ********************/
 /**********************************************************************/
 @media (max-width: 375px) and (max-height: 2099px) {
-  /* body and .main-container properties */
-  /* .main-txt properties */
-  /* .matrix properties */
-  /* .popup properties */
-  /* .imm-sch-url-container properties */ }
+  :root {
+    /* body and .main-container properties */
+    /* .main-txt properties */
+    --main-title-size: 54px;
+    --main-researcher-name-size: 36px;
+    /* .matrix properties */
+    /* .popup properties */
+    /* .imm-sch-url-container properties */ } }
 
 /**********************************************************************/
 /******************** For small mobile device ********************/
 /**********************************************************************/
 @media (max-width: 320px) and (max-height: 2099px) {
-  /* body and .main-container properties */
-  /* .main-txt properties */
-  /* .matrix properties */
-  /* .popup properties */
-  /* .imm-sch-url-container properties */ }
+  :root {
+    /* body and .main-container properties */
+    /* .main-txt properties */
+    --main-title-size: 48px;
+    --main-researcher-name-size: 30px;
+    --main-desc-size: 16px;
+    --main-link-size: 14px;
+    /* .matrix properties */
+    /* .popup properties */
+    /* .imm-sch-url-container properties */ } }
