arrow buttons and primary-secondary img swapping now work

--- a/app.css
+++ b/app.css
@@ -52,6 +52,7 @@
   --main-desc-padding-left: 0px;
   --main-desc-margin: initial;
   /* .matrix properties */
+  --matrix-padding: 0;
   --matrix-item-side-length: 70%;
   --matrix-item-max-side-length: 25vh;
   --matrix-item-gap: 0px;
@@ -61,9 +62,11 @@
   --max-matrix-width: 6000px;
   --matrix-overflow: hidden;
   /* .popup properties - overall */
+  --popup-transform: translateY(-50%) translateX(-50%);
   --popup-flex-flow: row nowrap;
   --popup-width: 65%;
   --popup-height: 71.429vh;
+  --popup-min-height: auto;
   --popup-max-width: 3500px;
   --popup-left-position: calc(var(--left-col-width) / 2);
   --popup-top-position: calc(var(--top-row-height) / 2);
@@ -97,7 +100,9 @@
   --popup-secondary-img-max-width: 100%;
   --popup-secondary-img-max-height: 20%;
   /* .imm-sch-url-container properties */
+  --imm-sch-cont-position: relative;
   --imm-sch-cont-height: initial;
+  --imm-sch-cont-width: initial;
   --imm-sch-cont-padding-top: 0px;
   --imm-sch-url-bg-color: rgba(0, 0, 0, 0);
   --imm-sch-url-vertical-align: center;
@@ -189,7 +194,8 @@ img {
   display: var(--main-txt-display);
   grid-template-areas: var(--main-txt-grid-areas);
   grid-template-rows: var(--main-txt-row-spacing);
-  position: relative; }
+  position: relative;
+  overflow: auto; }
 
 /* Title of the researcher's collection of work */
 .main-title {
@@ -231,13 +237,27 @@ img {
   grid-area: matrix;
   overflow: var(--matrix-overflow);
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  padding: var(--matrix-padding); }
 
 /* Individual cell in the matrix */
 .matrix-item {
   width: var(--matrix-item-side-length);
   max-width: var(--matrix-item-max-side-length);
-  justify-self: var(--center-position); }
+  justify-self: var(--center-position);
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transform: scale(1);
+          transform: scale(1); }
+
+/* Matrix items grow slightly when hovered on */
+.matrix-item:hover {
+  cursor: pointer;
+  -webkit-transition: 1s;
+  transition: 1s;
+  z-index: 100;
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25); }
 
 /**********************************************************************/
 /******************** Popup ********************/
@@ -264,13 +284,14 @@ img {
           align-items: var(--center-position);
   width: var(--popup-width);
   height: var(--popup-height);
+  min-height: var(--popup-min-height);
   max-width: var(--popup-max-width);
   -webkit-box-shadow: var(--popup-shadow);
           box-shadow: var(--popup-shadow);
   left: var(--popup-left-position);
   top: var(--popup-top-position);
-  -webkit-transform: translateY(-50%) translateX(-50%);
-          transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: var(--popup-transform);
+          transform: var(--popup-transform);
   pointer-events: none;
   opacity: 0;
   -webkit-transition-property: opacity;
@@ -352,7 +373,10 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: var(--popup-img-area-width);
-  height: var(--popup-img-area-height); }
+  height: var(--popup-img-area-height);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 /* The main (and largest) image of a matrix item */
 #primary-popup-img {
@@ -387,7 +411,17 @@ img {
   width: var(--popup-secondary-img-width);
   height: var(--popup-secondary-img-height);
   max-width: var(--popup-secondary-img-max-width);
-  max-height: var(--popup-secondary-img-max-height); }
+  max-height: var(--popup-secondary-img-max-height);
+  cursor: pointer;
+  -webkit-transition: .25s;
+  transition: .25s;
+  -webkit-transform: scale(1);
+          transform: scale(1); }
+
+/* Hover state for secondary-img */
+.secondary-img:hover {
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25); }
 
 /* Area of matrix popup containing item title, story, and URL */
 .popup-txt-area {
@@ -422,8 +456,10 @@ img {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: var(--imm-sch-cont-height);
+  width: var(--imm-sch-cont-width);
   padding-top: var(--imm-sch-cont-padding-top);
-  position: relative; }
+  position: var(--imm-sch-cont-position);
+  margin: 0; }
 
 /* Immersive Scholar logo */
 #logo {
@@ -436,7 +472,8 @@ img {
   padding: var(--imm-sch-url-padding);
   font-size: var(--imm-sch-url-size);
   display: var(--imm-sch-url-display);
-  vertical-align: var(--imm-sch-url-vertical-align-percentage); }
+  vertical-align: var(--imm-sch-url-vertical-align-percentage);
+  margin: 0; }
 
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
@@ -612,15 +649,13 @@ img {
     --popup-secondary-img-max-width: 100%;
     --popup-secondary-img-max-height: 25%;
     /* .imm-sch-url-container properties */
+    --imm-sch-url-padding: 0 75px 75px 75px;
     --imm-sch-url-vertical-align: center;
     --imm-sch-url-vertical-align-percentage: 40%;
     --imm-sch-url-padding: 0 75px 25px 0.5vw;
     --imm-sch-url-display: inline-table;
     --logo-display: inline-block;
-    --max-logo-height: 80px; }
-  .imm-sch-url {
-    margin: 0;
-    padding-left: 75px; } }
+    --max-logo-height: 80px; } }
 
 /* (Aspect ratios between 5/7 and 6/7) */
 /* For an even narrower "portrait" layout */
@@ -656,12 +691,10 @@ img {
     --imm-sch-cont-height: 5vh;
     --imm-sch-cont-padding-top: 1.25vh;
     --imm-sch-url-vertical-align-percentage: 55%;
-    --imm-sch-url-padding: 0px;
+    --imm-sch-url-padding: 0 75px 75px 0px;
     --imm-sch-url-size: 12px;
     --logo-padding: 0 0 0 50px;
-    --max-logo-height: 50px; }
-  .imm-sch-url {
-    padding-left: 0px; } }
+    --max-logo-height: 50px; } }
 
 /* The narrowest "portrait" layouts */
 /* (Aspect ratios below 11/21) */
@@ -710,12 +743,10 @@ img {
     --popup-secondary-img-max-width: 25%;
     --popup-secondary-img-max-height: 100%;
     /* .imm-sch-url-container properties */
-    --imm-sch-url-padding: 0 75px 75px 75px;
+    --imm-sch-url-padding: 0 75px 75px 50px;
     --imm-sch-url-size: 12px;
     --imm-sch-url-display: block;
-    --max-logo-height: 50px; }
-  .imm-sch-url {
-    padding-left: 50px; } }
+    --max-logo-height: 50px; } }
 
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
@@ -741,13 +772,14 @@ img {
     --bottom-row-height: 10vh;
     /* .main-txt properties */
     --main-txt-bg-color: rgba(0, 0, 0, 0.8);
-    --main-txt-heading-margin: 25px 0;
+    --main-txt-heading-margin: 0 0 25px 0;
     --main-txt-padding: 40px;
     --main-title-size: 60px;
     --main-researcher-name-size: 30px;
     --main-desc-size: 18px;
     --main-link-size: 12px;
     /* .matrix properties */
+    --matrix-item-gap: 25px 0px;
     --matrix-overflow: auto;
     --matrix-col-spacing: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     --matrix-row-spacing: 1fr 1fr 1fr;
@@ -769,25 +801,7 @@ img {
     --imm-sch-url-vertical-align-percentage: 52.5%;
     --imm-sch-url-padding: 0vw;
     --imm-sch-url-size: 10px;
-    --max-logo-height: 40px; }
-  .main-txt {
-    overflow: auto; }
-  .main-title {
-    margin-top: 0px; }
-  .matrix {
-    grid-gap: 25px 0px; }
-  .matrix-item {
-    -webkit-transition: 1s;
-    transition: 1s;
-    -webkit-transform: scale(1);
-            transform: scale(1); }
-  .matrix-item:hover {
-    cursor: pointer;
-    -webkit-transition: 1s;
-    transition: 1s;
-    z-index: 100;
-    -webkit-transform: scale(1.25);
-            transform: scale(1.25); } }
+    --max-logo-height: 40px; } }
 
 /* For a 4K display - between 2560px and 2000px wide */
 @media (max-width: 2560px) and (max-height: 2099px) {
@@ -851,11 +865,7 @@ img {
     --popup-secondary-img-max-height: 100%;
     --popup-img-flex-flow: column nowrap;
     --popup-secondary-img-flex-flow: row nowrap;
-    /* .imm-sch-url-container properties */ }
-  .popup-img-area {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    /* .imm-sch-url-container properties */ } }
 
 /**********************************************************************/
 /******************** For laptop ********************/
@@ -874,6 +884,7 @@ img {
     --main-txt-padding: 25px;
     --main-txt-heading-margin: 15px 0px;
     /* .matrix properties */
+    --matrix-padding: 25px 0px;
     --matrix-col-spacing: 1fr 1fr 1fr;
     --matrix-row-spacing: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     /* .popup properties - overall */
@@ -889,21 +900,17 @@ img {
     --popup-img-area-width: 80%;
     --popup-img-area-height: 50%;
     /* .imm-sch-url-container properties */
+    --imm-sch-cont-width: 40vw;
+    --imm-sch-cont-position: fixed;
     --imm-sch-url-bg-color: rgb(0, 0, 0, 0);
     --max-logo-height: 30px;
     --logo-padding: 25px 25px 0 25px;
     --imm-sch-url-padding: 5px 25px 25px 25px;
     --imm-sch-url-display: block;
     --logo-display: block; }
-  .matrix {
-    padding: 25px 0px; }
   .imm-sch-url-container {
-    position: fixed;
     bottom: 0;
-    right: 0;
-    width: 40vw; }
-  .imm-sch-url {
-    margin: 0; } }
+    right: 0; } }
 
 /**********************************************************************/
 /******************** For tablet ********************/
@@ -915,20 +922,25 @@ img {
     --body-overflow: auto;
     --horizontal-center-margins: 0 auto;
     --main-container-display: block;
+    --left-col-width: 100vw;
     /* .main-txt properties */
+    --main-txt-bg-color: rgb(0, 0, 0, 0);
     --main-txt-padding: 25px var(--matrix-left-right-gap);
     --main-title-size: 60px;
     --main-researcher-name-size: 36px;
     --main-desc-size: 18px;
     --main-link-size: 14px;
     /* .matrix properties */
+    --matrix-padding: 0;
     --matrix-left-right-gap: calc((100vw - 3 * 23.4375vw) / 6);
     --matrix-col-spacing: 1fr 1fr 1fr;
     --matrix-row-spacing: 1fr 1fr 1fr 1fr 1fr 1fr;
-    --matrix-item-gap: 2.5%;
+    --matrix-overflow: visible;
     /* .popup properties */
+    --popup-transform: translateY(0%) translateX(-50%);
     --popup-flex-flow: column nowrap;
     --popup-width: 75%;
+    --popup-min-height: 90vh;
     --popup-max-width: 75vw;
     --popup-height: auto;
     --popup-left-position: 50%;
@@ -941,32 +953,19 @@ img {
     --popup-primary-img-max-width: 75%;
     --popup-primary-img-max-height: 100%;
     --popup-secondary-img-slides-width: 20%;
-    --popup-secondary-img-slides-height: 100%;
+    --popup-secondary-img-slides-height: 45vw;
     --popup-secondary-img-max-width: 100%;
     --popup-secondary-img-max-height: 20%;
     --popup-img-flex-flow: row nowrap;
     --popup-secondary-img-flex-flow: column nowrap;
     /* .imm-sch-url-container properties */
+    --imm-sch-cont-width: 100vw;
+    --imm-sch-cont-position: static;
     --max-logo-height: 45px;
     --imm-sch-url-size: 12px;
     --logo-padding: 50px var(--matrix-left-right-gap) 0 var(--matrix-left-right-gap);
     --imm-sch-url-padding: 5px var(--matrix-left-right-gap) 25px var(--matrix-left-right-gap);
-    --main-url-separate-display: none; }
-  .main-txt {
-    background-color: rgba(0, 0, 0, 0); }
-  .matrix {
-    width: 100vw;
-    overflow: visible;
-    padding: 0px; }
-  .matrix-popup {
-    -webkit-transform: translateY(0%) translateX(-50%);
-            transform: translateY(0%) translateX(-50%);
-    min-height: 90vh; }
-  .secondary-img-slides {
-    height: 45vw; }
-  .imm-sch-url-container {
-    width: 100vw;
-    position: static; } }
+    --main-url-separate-display: none; } }
 
 /**********************************************************************/
 /******************** For larger mobile device ********************/
@@ -981,7 +980,7 @@ img {
     --popup-primary-img-max-width: 100%;
     --popup-primary-img-max-height: 75%;
     --popup-secondary-img-slides-width: 100%;
-    --popup-secondary-img-slides-height: 25%;
+    --popup-secondary-img-slides-height: auto;
     --popup-secondary-img-max-width: 20%;
     --popup-secondary-img-max-height: 100%;
     --popup-img-flex-flow: column nowrap;
@@ -990,9 +989,7 @@ img {
     --popup-title-size: 30px;
     --popup-story-size: 16px;
     /* .imm-sch-url-container properties */
-    --max-logo-height: 35px; }
-  .secondary-img-slides {
-    height: auto; } }
+    --max-logo-height: 35px; } }
 
 /**********************************************************************/
 /******************** For medium mobile device ********************/
