--- a/app.css
+++ b/app.css
@@ -116,6 +116,7 @@
   --max-logo-height: 110px;
   --logo-padding: 0 0 0 2.083vw; }
 
+/* The root element */
 html {
   scroll-behavior: smooth; }
 
@@ -276,12 +277,26 @@ img {
   overscroll-behavior: contain;
   width: 100vw;
   height: 100vh;
-  visibility: hidden; }
+  visibility: hidden;
+  pointer-events: none;
+  -webkit-transition-property: visibility;
+  transition-property: visibility;
+  -webkit-transition-duration: 0.6s;
+          transition-duration: 0.6s;
+  -webkit-transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+          transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95); }
 
 /* Class to make overlay visible only in popup mode */
 .overlay.visible {
   visibility: visible;
-  z-index: 100; }
+  z-index: 100;
+  pointer-events: auto;
+  -webkit-transition-property: visibility;
+  transition-property: visibility;
+  -webkit-transition-duration: 0.6s;
+          transition-duration: 0.6s;
+  -webkit-transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+          transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95); }
 
 /* Container for matrix item title, story, images, and URL */
 .matrix-popup {
