minor fixes to footer padding in personal-sized displays

--- a/app.css
+++ b/app.css
@@ -814,9 +814,12 @@ img {
     --popup-title-size: 48px;
     --popup-story-size: 18px;
     /* .imm-sch-url-container properties */
+    --imm-sch-cont-padding: 0 0 0 40px;
     --imm-sch-url-vertical-align-percentage: 52.5%;
     --imm-sch-url-size: 10px;
-    --max-logo-height: 40px; } }
+    --max-logo-height: 40px; }
+  #logo {
+    margin-right: 10px; } }
 
 /* For a 4K display - between 2560px and 2000px wide */
 @media (max-width: 2560px) and (max-height: 2099px) {
@@ -919,6 +922,7 @@ img {
     --popup-img-area-width: 80%;
     --popup-img-area-height: 50%;
     /* .imm-sch-url-container properties */
+    --imm-sch-cont-padding: var(--main-txt-padding);
     --imm-sch-cont-width: 40vw;
     --imm-sch-cont-position: fixed;
     --imm-sch-url-bg-color: rgb(0, 0, 0, 0);
